--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adriano Volter",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.0"
   }
 }
